# kermit

./: .gitignore  CMakeLists.txt  Makefile  README.md  k3rmit.c  k3rmit.conf  k3rmit.h
.config/: k3rmit.conf  k3rmit.desktop  kermit.conf  kermit.desktop
.github/workflows/: build.yml
man/: kermit.1
src/: k3rmit.c  k3rmit.h  kermit.c  kermit.h
